<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.finanzapp.app.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboardFragment_to_transactionListFragment"
            app:destination="@id/transactionListFragment" />
    </fragment>

    <fragment
        android:id="@+id/transactionListFragment"
        android:name="com.finanzapp.app.ui.transactions.TransactionListFragment"
        android:label="@string/transactions_title"
        tools:layout="@layout/fragment_transaction_list">
        <argument
            android:name="preselectedCategoryId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="preselectedStartDateMillis"
            android:defaultValue="-1L"
            app:argType="long" />
        <argument
            android:name="preselectedEndDateMillis"
            android:defaultValue="-1L"
            app:argType="long" />
        <argument
            android:name="preselectedCategoryIds"
            android:defaultValue="@null"
            app:argType="string[]"
            app:nullable="true" />
        <action
            android:id="@+id/action_transactionListFragment_to_addEditTransactionFragment"
            app:destination="@id/addEditTransactionFragment" />
        <action
            android:id="@+id/action_transactionListFragment_to_importTransactionsFragment"
            app:destination="@id/importTransactionsFragment" />
    </fragment>

    <fragment
        android:id="@+id/importTransactionsFragment"
        android:name="com.finanzapp.app.ui.transactions.ImportTransactionsFragment"
        android:label="@string/label_import_result_title"
        tools:layout="@layout/fragment_import_transactions">
        <argument
            android:name="familyId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/addEditTransactionFragment"
        android:name="com.finanzapp.app.ui.transactions.AddEditTransactionFragment"
        android:label="@string/add_transaction"
        tools:layout="@layout/fragment_add_edit_transaction" />

    <fragment
        android:id="@+id/accountListFragment"
        android:name="com.finanzapp.app.ui.accounts.AccountListFragment"
        android:label="@string/nav_accounts"
        tools:layout="@layout/fragment_account_list" />

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.finanzapp.app.ui.statistics.StatisticsFragment"
        android:label="@string/stats_title"
        tools:layout="@layout/fragment_statistics">
        <action
            android:id="@+id/action_statisticsFragment_to_transactionListFragment"
            app:destination="@id/transactionListFragment" />
    </fragment>

    <fragment
        android:id="@+id/inviteMemberFragment"
        android:name="com.finanzapp.app.ui.family.InviteMemberFragment"
        android:label="@string/nav_invite"
        tools:layout="@layout/fragment_invite_member" />

    <fragment
        android:id="@+id/memberListFragment"
        android:name="com.finanzapp.app.ui.family.MemberListFragment"
        android:label="@string/nav_members"
        tools:layout="@layout/fragment_member_list" />

    <fragment
        android:id="@+id/familySettingsFragment"
        android:name="com.finanzapp.app.ui.family.FamilySettingsFragment"
        android:label="@string/nav_family_settings"
        tools:layout="@layout/fragment_family_settings">
        <action
            android:id="@+id/action_familySettingsFragment_to_manageCategoriesFragment"
            app:destination="@id/manageCategoriesFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.finanzapp.app.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_privacyPolicyFragment"
            app:destination="@id/privacyPolicyFragment" />
    </fragment>

    <fragment
        android:id="@+id/privacyPolicyFragment"
        android:name="com.finanzapp.app.ui.settings.PrivacyPolicyFragment"
        android:label="@string/nav_privacy"
        tools:layout="@layout/fragment_privacy_policy" />

    <fragment
        android:id="@+id/manageCategoriesFragment"
        android:name="com.finanzapp.app.ui.categories.ManageCategoriesFragment"
        android:label="@string/nav_manage_categories"
        tools:layout="@layout/fragment_manage_categories" />
</navigation>
