<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.finanzapp.app.ui.onboarding.WelcomeFragment"
        android:label="@string/nav_welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_createFamilyFragment"
            app:destination="@id/createFamilyFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_joinByCodeFragment"
            app:destination="@id/joinByCodeFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_acceptInvitationFragment"
            app:destination="@id/acceptInvitationFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_waitingApprovalFragment"
            app:destination="@id/waitingApprovalFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_privacyConsentFragment"
            app:destination="@id/privacyConsentFragment" />
        <action
            android:id="@+id/action_welcomeFragment_to_familySwitcherFragment"
            app:destination="@id/familySwitcherFragment" />
    </fragment>

    <fragment
        android:id="@+id/familySwitcherFragment"
        android:name="com.finanzapp.app.ui.family.FamilySwitcherFragment"
        android:label="@string/label_my_families"
        tools:layout="@layout/fragment_family_switcher" />

    <fragment
        android:id="@+id/acceptInvitationFragment"
        android:name="com.finanzapp.app.ui.onboarding.AcceptInvitationFragment"
        android:label="@string/nav_accept_invitation"
        tools:layout="@layout/fragment_accept_invitation" />

    <fragment
        android:id="@+id/createFamilyFragment"
        android:name="com.finanzapp.app.ui.onboarding.CreateFamilyFragment"
        android:label="@string/nav_create_family"
        tools:layout="@layout/fragment_create_family">
        <action
            android:id="@+id/action_createFamilyFragment_to_addInitialAccountsFragment"
            app:destination="@id/addInitialAccountsFragment" />
    </fragment>

    <fragment
        android:id="@+id/addInitialAccountsFragment"
        android:name="com.finanzapp.app.ui.onboarding.AddInitialAccountsFragment"
        android:label="@string/label_initial_accounts_title"
        tools:layout="@layout/fragment_add_initial_accounts" />

    <fragment
        android:id="@+id/joinByCodeFragment"
        android:name="com.finanzapp.app.ui.onboarding.JoinByCodeFragment"
        android:label="@string/nav_join_by_code"
        tools:layout="@layout/fragment_join_by_code">
        <action
            android:id="@+id/action_joinByCodeFragment_to_waitingApprovalFragment"
            app:destination="@id/waitingApprovalFragment" />
    </fragment>

    <fragment
        android:id="@+id/waitingApprovalFragment"
        android:name="com.finanzapp.app.ui.onboarding.WaitingApprovalFragment"
        android:label="@string/nav_waiting_approval"
        tools:layout="@layout/fragment_waiting_approval" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.finanzapp.app.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/privacyConsentFragment"
        android:name="com.finanzapp.app.ui.onboarding.PrivacyConsentFragment"
        android:label="@string/nav_privacy"
        tools:layout="@layout/fragment_privacy_consent" />

</navigation>
